crates/weft-snapshots/tests/snapshots/swiftui-data/corpus-menu.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-menu as swiftui-data
---
// Generated by `weft swiftui` from the Weft screen "account-menu".
// Regenerate it from the .weft source, or edit it and read it back with
// `weft import-swiftui`; the `weft…` helpers at the end carry what SwiftUI cannot say.

import Observation
import SwiftUI

/// The data the screen reads and writes.
@Observable
final class AccountMenuModel {
    var user: UserData = UserData()
    var isOwner: Bool = false

    /// Every property, defaulting to the value it is declared with.
    init(
        user: UserData = UserData(),
        isOwner: Bool = false
    ) {
        self.user = user
        self.isOwner = isOwner
    }

    struct UserData: Hashable, Sendable {
        var email: String = ""
    }
}

extension AccountMenuModel {
    /// The sample data the screen was generated with.
    static var sample: AccountMenuModel {
        AccountMenuModel(
            user: UserData(
                email: "ada@example.com"
            ),
            isOwner: false
        )
    }
}

/// The host actions the screen names.
enum AccountMenuAction: String, CaseIterable, Sendable {
    case navProfile = "nav.profile"
    case navSettings = "nav.settings"
    case navBilling = "nav.billing"
    case authSignout = "auth.signout"
}

/// What the host receives when the screen fires an action.
struct AccountMenuEvent: Sendable, Equatable {
    var action: AccountMenuAction
    /// The id of the element that fired it.
    var id: String
    /// The data path of the list item it came from, e.g. `$.todos.2`.
    var item: String?
}

/// The design tokens the screen uses, in points.
struct AccountMenuTheme: Sendable {
}

struct AccountMenuScreen: View {
    @Bindable var model: AccountMenuModel
    var theme = AccountMenuTheme()
    var perform: (AccountMenuEvent) -> Void = { _ in }

    var body: some View {
        VStack(alignment: .leading) {
            Text(model.user.email)
                .accessibilityIdentifier("signed-in")
            Menu {
                Button {
                    send(.navProfile, "item-profile")
                } label: {
                    Text("Profile")
                }
                .accessibilityIdentifier("item-profile")
                Button {
                    send(.navSettings, "item-settings")
                } label: {
                    Text("Settings")
                }
                .accessibilityIdentifier("item-settings")
                Button {
                    send(.navBilling, "item-billing")
                } label: {
                    Text("Billing")
                }
                .disabled(!model.isOwner)
                .accessibilityIdentifier("item-billing")
                Button {
                    send(.authSignout, "item-signout")
                } label: {
                    Text("Sign out")
                }
                .accessibilityIdentifier("item-signout")
            } label: {
                Text("Account")
            }
            .accessibilityIdentifier("menu")
        }
        .accessibilityElement(children: .contain)
        .accessibilityLabel("Account menu")
        .accessibilityIdentifier("account-menu")
    }

    private func send(_ action: AccountMenuAction, _ id: String, item: String? = nil) {
        perform(AccountMenuEvent(action: action, id: id, item: item))
    }
}

#Preview {
    AccountMenuScreen(model: .sample)
}

// MARK: - Weft helpers
// Weft semantics SwiftUI has no modifier for. `fileprivate`, so every generated screen carries
// its own copy and several screens can live in one module.

fileprivate extension View {
    /// A Weft attribute SwiftUI cannot express; kept so the screen imports back unchanged.
    func weftProp(_ name: String, _ value: String) -> some View { self }
    func weftProp(_ name: String, _ value: Bool) -> some View { self }
    func weftProp(_ name: String, _ value: Int) -> some View { self }
    func weftProp(_ name: String, _ value: Double) -> some View { self }
    /// Removes the view from layout and accessibility while `hidden` is true.
    func weftHidden(_ hidden: Bool) -> some View { modifier(WeftHidden(hidden: hidden)) }
    /// Names the `<each>` element the repeated content came from.
    func weftEach(_ id: String) -> some View { self }
    /// The keyboard a text field of this Weft `type` asks for.
    func weftFieldType(_ type: String) -> some View {
        #if os(iOS)
        switch type {
        case "email": return AnyView(self.keyboardType(.emailAddress).textInputAutocapitalization(.never))
        case "number": return AnyView(self.keyboardType(.decimalPad))
        case "search": return AnyView(self.submitLabel(.search))
        default: return AnyView(self)
        }
        #else
        return self
        #endif
    }
}

fileprivate struct WeftHidden: ViewModifier {
    let hidden: Bool
    func body(content: Content) -> some View {
        if !hidden { content }
    }
}

fileprivate struct WeftCheckboxStyle: ToggleStyle {
    func makeBody(configuration: Configuration) -> some View {
        Button { configuration.isOn.toggle() } label: {
            HStack {
                Image(systemName: configuration.isOn ? "checkmark.square.fill" : "square")
                configuration.label
            }
        }
        .buttonStyle(.plain)
        .accessibilityValue(configuration.isOn ? "checked" : "unchecked")
    }
}

/// Only web and mail links open; anything else in a document is ignored.
fileprivate func weftURL(_ href: String) -> URL? {
    guard let url = URL(string: href) else { return nil }
    switch url.scheme?.lowercased() {
    case "http", "https", "mailto", nil: return url
    default: return nil
    }
}

// Weft reads any value as text, a flag or a number (SPEC §2.1); these convert the model's types.
fileprivate func weftText(_ v: Int) -> String { String(v) }
fileprivate func weftText(_ v: Bool) -> String { v ? "true" : "false" }
fileprivate func weftText<T>(_ v: T) -> String { "" }
// An array or object is true even when empty (SPEC §2.1): only the model's scalars can be false.
fileprivate func weftOn<T>(_ v: T) -> Bool { true }
fileprivate func weftInt(_ v: String) -> Int { Int(v) ?? 0 }
fileprivate func weftInt(_ v: Bool) -> Int { v ? 1 : 0 }
fileprivate func weftInt<T>(_ v: T) -> Int { 0 }
fileprivate func weftColumns(_ v: Int) -> Int { max(1, v) }
fileprivate func weftHeadingLevel(_ v: Int) -> AccessibilityHeadingLevel {
    switch min(max(v, 1), 6) { case 1: .h1; case 2: .h2; case 3: .h3; case 4: .h4; case 5: .h5; default: .h6 }
}
fileprivate func weftHeadingFont(_ v: Int) -> Font {
    switch min(max(v, 1), 6) { case 1: .largeTitle; case 2: .title; case 3: .title2; case 4: .title3; case 5: .headline; default: .subheadline }
}
